# tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: check-email.md  sync-deps.md
.claude/skills/update-tool-docs/: SKILL.md
py/: README.md  emailcheck.py  genimg.py  images2pdf.py  mail.py  mfields.py  speedtest.py  tgchats.py  tgcleanup.py  tgpurge.py  webmirror.py
